Fix tabmenu dropping below header on IE

--- a/style/modules/header/_header-bottom-left.scss
+++ b/style/modules/header/_header-bottom-left.scss
@@ -98,6 +98,7 @@
 
     // restore initial tabmenu values
     .tabmenu {
+      position: static;
       left: initial;
       top: initial;
       width: initial;
